services/console-auth/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-auth
  namespace: cobalto
  labels:
    app: console-auth
    component: auth
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
      name: http
  selector:
    app: console-auth
